# substance

./: LICENSE  README.md  pyproject.toml
src/substance/: __init__.py
src/substance/cli/: substance.py
