[project]
name = "substance"
version = "0.1.0"
description = "A framework for AI-assisted ontology-driven application development"
readme = "README.md"
authors = [
    { name = "Jeffrey Scott Graves", email = "scottgrvs@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
